# gjo-se.com

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_users_table.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: health.py
backend/app/auth/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  base_model.py  session.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py  test_health.py
docs/: git-flow.md  github-projects.md  system_requirements.md
docs/epics/auth-flow/: auth-flow-research.md  auth-vollstaendigkeit.md  fastapi-modularisierung-research.md
docs/epics/blueprint/: prompt-env-refactor.md  (+3 more)
docs/requirements/: plan-projectScaffold.prompt.md  requirements-list.md
docs/research/: ai-in-pycharm.md  env-konzept.md  fastapi-research.md
docs/roles/: _crew-workflow.md  _template.md  ari.md  dave.md  developer.md  devops.md  hanni.md  pia.md  requirements_engineer.md  rex.md  sam.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
scripts/shell/: aliases.zsh  dev.zsh  git.zsh  github.zsh  imports.zsh
(+116 files in other folders)
